Update Express, format code, improve server console message. General tidy-up.

--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
 
-  <title>Studio Clock</title>
-  <meta name="author" content="Ross Wilson">
+    <title>Studio Clock</title>
+    <meta name="author" content="Ross Wilson" />
 
-  <link rel="stylesheet" href="css/main.css?v=1.0">
-</head>
+    <link rel="stylesheet" href="css/main.css?v=1.0" />
+  </head>
 
-<body>
-  <div id="container">
-    <canvas id="clockCanvas" width="1200" height="625">Your browser does not support the HTML5 canvas tag.</canvas>
-  </div>
+  <body>
+    <div id="container">
+      <canvas id="clockCanvas" width="1200" height="625"
+        >Your browser does not support the HTML5 canvas tag.</canvas
+      >
+    </div>
 
-  <script src="js/main.js"></script>
-</body>
+    <script src="js/main.js"></script>
+  </body>
 </html>
